@@ -49,6 +49,7 @@ To take advantage of all SFCGAL featurs, SFCGAL 1.5.0+ is needed.
   - GH-744, Don't create docbook.css for the HTML manual,
             use style.css instead (Chris Mayo)
   - Faster implementation of point-in-poly cached index (Paul Ramsey)
+  - Improve performance of ST_GeneratePoints (Paul Ramsey)
 
 
 PostGIS 3.4.0
